css/styles.css
/*
Theme Name: ME – Resume and Personal Portfolio Responsive Template
Author URI: http://webthemez.com/ 
*/
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
* {
	margin: 0;
	padding: 0;
	font-family: 'Open Sans', sans-serif;
}
body {
	font-size: 14px;
	font-family: 'Open Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
	background: #fff;
}
::selection {
	color: #fff;
	background: #FF7A00;
}

::-moz-selection {
 color: #fff;
 background: #FF7A00;
}
p {
	color: #858585;
	line-height: 22px;
	font-size: 15px;
}
.white {
	background: #fff;
}
.pDark p {
	color: #6D6D6D;
}
.pDark h3 {
	color: #BEBEBE;
}
.btn, .form-control, .team-socials i {
	border-radius: 0px !important;
}
.button-outline {
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	vertical-align: middle;
	zoom: 1;
	color: #fff;
	padding: 10px 25px;
	border: 2px solid #fff;
	border-radius: 0px;
	font-size: 16px;
	font-weight: 400;
	background: rgba(255,255,255,0.15);
}
.button-outline:hover {
	color: #fff;
	background: rgba(255,255,255,0.35);
}
a {
	color: #FF7A00;
	text-decoration: none;
	text-shadow: none;
	-webkit-transition: all 0.2s linear;
	-moz-transition: all 0.2s linear;
	-ms-transition: all 0.2s linear;
	-o-transition: all 0.2s linear;
	transition: all 0.2s linear;
}
a:hover {
	color: #DF3927;
	text-decoration: none;
}
.btn {
	border: 0px;
	border-radius: 0px;
}
.btn:hover {
	background: #13df00;
}
.btn-primary {
	background: #1e7100;
}	
.form-control {
	border-radius: 0px;
}
.mrgn30 {
	margin: 30px 0;
}
.copyright {
	color: #6D6D6D;
	background: #000;
	padding: 20px 0;
	line-height: 34px;
}
#top {
	position: relative;
}
.topHome {
	position: fixed;
	bottom: 20px;
	right: 20px;
	z-index: 5;
	background: #FF7A00;
}
.topHome .fa-2x {
	font-size: 20px;
	color: #fff;
	margin: 4px;
}
h2 {
	font-size: 40px;
	margin: 0;
	padding-bottom: 16px;
	font-variant: small-caps;
}
/* Header 
----------------------------------------------*/
.header {
	position: fixed;
	width: 100%;
	background: transpreant;
	z-index: 50;
	border-radius: 0;
	top: 0px;
}
.navbar-inverse .navbar-toggle {
	border-color: #00ff04;
	background-color: #074102;
}
.header .navbar {
	margin: 0;
	background: transparent !important;
}
.navbar-inverse .navbar-toggle .icon-bar {
/*background-color: #FF7A00;*/;
}
.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
	background: #FF7A00;
}
.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
	color: #fff;
}
.navbar-inverse .navbar-toggle:hover .icon-bar {
	background: #fff;
}
.navbar-inverse .navbar-nav > li > a {
	color: #fff;
}
.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
	color: #FFFFFF;
}
.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
	color: #FF7A00;
	background: none;
}
.navbar-toggle {
}
.addBg {
background: #000 !important;
-webkit-box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
-moz-box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.38);
}
/*.carousel-inner*/
#myCarousel {
	margin-top: 50px;
	border-bottom: 4px solid #FF7A00;
}
.carousel-inner > .item {
}
.carousel-caption {
	padding: 0px;
	bottom: 40%;
	display: block;
	height: 80px;
}
.carousel-caption h1 {
	font-size: 45px;
	padding: 10px 15px;
	background: rgba(128, 180, 33, 0.80);
	color: #FFFFFF;
	text-shadow: none;
	font-weight: bold;
	display: inline-block;
}
.carousel-caption h3 {
	font-size: 30px;
	color: #1C4604;
	font-weight: bold;
	text-shadow: #fff 1px 1px 1px;
}
.actionPanel {
	padding: 25px 0;
	background: #FF7A00;
}
.actionPanel h3 {
	margin: 0px;
}
.circle {
	background: #FF7A00;
	height: 60px;
	width: 60px;
	border-radius: 35px;
	color: #fff;
	line-height: 60px !important;
}
/*----Nav ----*/
.header .navbar-brand {
	float: left;
	padding: 16px 15px;
	line-height: 18px;
	height: 50px;
	/*color:#FF7A00;*/;
}
.navbar-brand b {
	color: #fff;
	font-family: 'Pacifico', cursive;
	font-weight: 400;
}
.logo {
	font-size: 2.2em;
	text-shadow: none;
	margin: 8px 0 0 0;
}
.logo:hover {
	color: #5A5A5A;
}
.header .navbar {
	margin: 0;
	background: #fff;
	border: 0;
}
.navbar-inverse .navbar-nav > li > a {
	font-size: 1.2em;
	line-height: normal;
	margin: 17px;
	padding: 6px 10px !important;
	border-radius: 5px;
}
.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
	color: rgb(16, 130, 48);
	font-weight: bold;
	background: none;
}
.navbar-nav > li:hover > a {
	color: #fff;
}
.header .navbar-nav > li > a {
	padding: 25px 18px;
	text-transform: uppercase;
}
.page-section {
	width: 100%;
	height: auto;
	padding: 30px 0;
}
.noPadd {
	padding: 0;
}
.page-section h1 {
	font-size: 3.5em;
	margin: 90px 0 30px;
	line-height: 1.2em;
}
.page-section h1 span {
	font-weight: 200;
}
.page-section h2 {
	color: #FF7A00;
}
.page-section p {
	font-size: 1.1em;
	line-height: 1.6em;
}
.darkBg {
	background: rgb(44, 44, 44);
}
.darkBg .fa {
	color: #FF7A00;
}
/*--- Banner ----*/
.banner-container {
	width: 100%;
	position: relative;
	padding: 0px;
	box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
	/*background: url("../images/banner-bg.jpg") no-repeat;*/
	background-size: 100% 100%;
	background-size: cover;
	position: relative;
}
.banner-container > img {
	width: 100%;
	
}
.banner-content {
	position: absolute;
	z-index: 3;
	top: 0px;
	left: 0px;
	right: 0px;
}
.banner-content h2 {
	color: #fff;
	font-size: 3.5em;
	margin: 2% 0 30px;
	line-height: 1.2em;
}
.banner-content p {
	font-size: 1.6em;
	font-weight: normal;
	font-style: normal;
	color: #fff;
}
.heroText {
	margin-top: 20%;
}
.heroText h2 {
	border: none;
	color: #FFF;
	text-transform: uppercase;
	line-height: 50px;
	padding-bottom: 0;
	font-size: 45px;
	margin-bottom: 35px;
	font-weight: bold;
}
/* ... */

